welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:2: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Short)Int
match expected type ?
	if (a%10 =b%10 && b%10=c%10) {
             ^lastDigit:4: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Short)Int
match expected type ?
	} else if (a%10 =b%10 && b%10=c%10 && a%10=c%10) {
                    ^lastDigit:11: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Short)Int
match expected type ?
	if (a%10 =b%10 && a%10=c%10) {
             ^lastDigit:13: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Short)Int
match expected type ?
	} else if (a%10 =b%10 && b%10=c%10 && a%10=c%10) {
                    ^